# monad

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/monad/: function.h  monad.h  optional.h  shared_task.h  task.h
include/sib/: shared_task.h
include/sib/monad/: function.h  monad.h  optional.h  task.h
src/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  function.cpp  optional.cpp  shared_task.cpp  task.cpp  tests.cpp
